update nginx configs

--- a/installer_files/dev.conf
+++ b/installer_files/dev.conf
@@ -4,7 +4,7 @@
 server {
     #LISTEN_HERE
 
-    server_name $DEV_DOMAIN;
+    server_name DEV_DOMAIN;
 
     #SSL_CERT ssl_certificate /etc/nginx/certs/cf.pem;
     #SSL_CERT_KEY ssl_certificate_key /etc/nginx/certs/cf.key;
@@ -13,6 +13,9 @@ server {
 
     root /var/www/dev/public_html;
     index index.html;
+
+    access_log /var/log/nginx/dev-access.log;
+    error_log /var/log/nginx/dev-error.log;
 
     # The git-hook uses the nginx access log to trigger redeploys
     # The RAND_PATH_HERE is replaced by a random path in the install script
@@ -38,7 +41,7 @@ server {
         fastcgi_pass unix:/var/run/php/php-fpm.sock;
 
         # Specify SCRIPT_FILENAME
-        fastcgi_param SCRIPT_FILENAME \$document_root/checkproof.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/checkproof.php;
         include fastcgi_params;
     }
 }
