--- a/installer_files/live.conf
+++ b/installer_files/live.conf
@@ -4,7 +4,7 @@
 server {
     #LISTEN_HERE
 
-    server_name $LIVE_DOMAIN;
+    server_name LIVE_DOMAIN;
 
     #SSL_CERT_HERE
     #SSL_CERT_KEY_HERE
@@ -30,7 +30,7 @@ server {
         fastcgi_pass unix:/var/run/php/php-fpm.sock;
 
         # Specify SCRIPT_FILENAME
-        fastcgi_param SCRIPT_FILENAME \$document_root/checkproof.php;
+        fastcgi_param SCRIPT_FILENAME $document_root/checkproof.php;
         include fastcgi_params;
     }
 }
