update nginx configs

--- a/installer_files/live.conf
+++ b/installer_files/live.conf
@@ -6,8 +6,8 @@ server {
 
     server_name LIVE_DOMAIN;
 
-    #SSL_CERT_HERE
-    #SSL_CERT_KEY_HERE
+    #SSL_CERT ssl_certificate /etc/nginx/certs/cf.pem;
+    #SSL_CERT_KEY ssl_certificate_key /etc/nginx/certs/cf.key;
 
     #AUTHENTICATED_ORIGIN_CERT_HERE
 
